<resources>
    <string name="app_name">fakebooc</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="fakebooc">Fakebooc</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="add_post">What\'s on your mind?</string>
    <string name="upload_btn">Upload post</string>
    <string name="upload_btn_image">Upload Button Image</string>
    <string name="remove_image_btn">Remove Image Button</string>
    <string name="image_preview">Image Preview</string>
    <string name="edit_post_btn">Edit your post</string>
    <string name="mode_icon">Day/Night Mode Icon</string>
    <string name="sign">Sign</string>
    <string name="in">In</string>
    <string name="login_with_email">Login with email</string>
    <string name="email_icon">Email Icon</string>
    <string name="email_address">Email Address</string>
    <string name="password_icon">Password Icon</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_background">Login Background</string>
    <string name="ask_account">Dont have an account?</string>
    <string name="sign_up">Sign Up!</string>
    <string name="welcome">Welcome</string>
    <string name="to">to</string>
    <string name="full_name_icon">Full Name Icon</string>
    <string name="full_name">Full name</string>
    <string name="birthday">Birthday</string>
    <string name="pfp">profile picture</string>
    <string name="user_name">Ohad Katz</string>
    <string name="friends">Friends</string>
    <string name="groups">Groups</string>
    <string name="saved">Saved</string>
    <string name="memories">Memories</string>
    <string name="nav_drawer_open">Open Navigation Drawer</string>
    <string name="nav_drawer_close">Close Navigation Drawer</string>
    <string name="logout">Logout</string>
    <string name="edit_post">Edit</string>
    <string name="remove_post">Remove</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="user_pfp">User pfp</string>
    <string name="gal">Gal Mansuryan</string>
    <string name="default_comment">This is a comment with text!</string>
    <string name="default_likes">12</string>
    <string name="like_button">Like Button</string>
    <string name="options">Options</string>
    <string name="adam">Adam Celer</string>
    <string name="default_post">This is the post main text</string>
    <string name="post_image">Post Image</string>
    <string name="deault_date">01/01/2000</string>
    <string name="share">Share</string>
    <string name="add_comment">Add Comment</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="ohad">Ohad Katz</string>
    <string name="BaseUrl">http://10.0.2.2:8080/api/</string>
</resources>