<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPost">

    <EditText
        android:id="@+id/post_content"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30sp"
        android:hint="@string/add_post"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/upload_post"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/upload_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="516dp"
        android:text="@string/upload_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/upload_image_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/attach"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toEndOf="@+id/upload_post"
        app:layout_constraintTop_toBottomOf="@+id/post_content"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/upload_btn_image" />

    <ImageButton
        android:id="@+id/remove_image_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/hide_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/upload_post"
        app:layout_constraintTop_toBottomOf="@id/upload_image_btn"
        app:layout_constraintHorizontal_bias="0.64"
        android:contentDescription="@string/remove_image_btn" />

    <ImageView
        android:id="@+id/Update_image_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upload_post"
        app:srcCompat="@drawable/empty_image"
        android:contentDescription="@string/image_preview" />

</androidx.constraintlayout.widget.ConstraintLayout>