<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:id="@+id/rel"
    tools:context=".Login">


    <LinearLayout
        android:layout_above="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alfa_slab_one"
                android:text="@string/sign"
                android:textColor="@color/secondary"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/alfa_slab_one"
                android:text="@string/in"
                android:textColor="@color/white"
                android:textSize="30sp" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login_with_email"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="20dp">

            <ImageView
                android:id="@+id/emailIcon"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/email_icon" />
            <LinearLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/emailIcon"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_address"
                    android:textSize="12sp"
                    android:textColor="#80FFFFFF"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:background="@android:color/transparent"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:textColor="#FFFFFF"
                    android:autofillHints="Email"
                    tools:ignore="LabelFor" />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/emailLayout"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="20dp"
                android:background="#99FFFFFF"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp">

            <ImageView
                android:id="@+id/PasswordIcon"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/password_icon" />
            <LinearLayout
                android:id="@+id/PasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/PasswordIcon"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textSize="12sp"
                    android:textColor="#80FFFFFF"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:background="@android:color/transparent"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:textColor="#FFFFFF"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor" />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/PasswordLayout"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="20dp"
                android:background="#99FFFFFF"
                />
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/round_back_secondary_100"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/bottomBar"
        android:background="#FFFFFF"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/backgroundLoginImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-5dp"
            android:layout_marginEnd="-5dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/login_background" />
        <!--            android:src="@drawable/Wave"-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/backgroundLoginImage"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ask_account"/>
            <TextView
                android:id="@+id/signUpBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/secondary"
                android:textStyle="bold"
                android:textSize="16sp"
                />


        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>