<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/comment_background"
    android:layout_marginVertical="5sp">

    <ImageView
        android:id="@+id/comment_user_image"
        android:layout_width="25sp"
        android:layout_height="25sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gal"
        android:contentDescription="@string/user_pfp" />

    <TextView
        android:id="@+id/comment_user_name"
        android:layout_width="wrap_content"
        android:layout_height="25sp"
        android:layout_marginTop="10dp"
        android:text="@string/gal"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.035"
        app:layout_constraintStart_toEndOf="@+id/comment_user_image"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/comment_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/post_background"
        android:padding="2sp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:singleLine="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/like_btn"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comment_user_name"
        app:layout_constraintVertical_bias="1.0"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/comment_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="8dp"
        android:padding="2sp"
        android:text="@string/default_comment"
        android:background="@drawable/comment_background"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/like_btn"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comment_user_name"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/default_likes"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/like_btn"
        android:layout_width="18sp"
        android:layout_height="18sp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/likes"
        app:srcCompat="@drawable/like"
        android:contentDescription="@string/like_button" />

    <ImageView
        android:id="@+id/options_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/likes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.965"
        app:layout_constraintStart_toEndOf="@+id/comment_user_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.611"
        app:srcCompat="@drawable/options_btn"
        android:contentDescription="@string/options" />
</androidx.constraintlayout.widget.ConstraintLayout>